# The-Evolution-of-Todo

./: .coverage  .dockerignore  .gitignore  CLAUDE.md  README.md  WORKING_URLS.md  docker-compose.yml  package.json  pyproject.toml
.claude/agents/: phase1-builder.md  phase2-engineer.md  phase3-ai-agent.md  project-architect.md
.claude/commands/: sp.phase1.md  sp.phase2.md  sp.phase3.md  sp.qa.md
.claude/skills/: sp.phase1.SKILL.md  sp.phase2.SKILL.md  sp.phase3.SKILL.md  sp.qa.SKILL.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
backend/: .dockerignore  CLAUDE.md  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: bad7ae38c19a_add_conversation_and_message_tables.py
backend/src/: main.py  main_temp.py
backend/src/api/: auth.py  chat.py  deps.py  todos.py
backend/src/core/: db.py  security.py
backend/src/models/: __init__.py  conversation.py  message.py  task.py  user.py
backend/src/services/: ai_agent.py  chat_service.py
backend/src/tools/: __init__.py  todo_tools.py
backend/tests/: test_auth.py  test_todos.py
frontend/: .dockerignore  CLAUDE.md  Dockerfile  package-lock.json  package.json  tailwind.config.js.bak
frontend/src/: global.d.ts
history/adr/: 0001-python-native-authentication-strategy.md
specs/001-basic-todo/: plan.md  spec.md  tasks.md
specs/002-full-stack-todo/: plan.md  spec.md  tasks.md
specs/003-todo-ai-chatbot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: __init__.py  main.py
src/cli/: __init__.py  commands.py  (+1 more)
tests/: __init__.py  test_integration.py  test_models.py  test_services.py
todo-web-app/: Chart.yaml  README.md  httproute.yaml.disabled  values.yaml
(+85 files in other folders)
