[project]
name = "backend"
version = "0.1.0"
description = "FastAPI Backend for Todo App"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlmodel",
    "alembic",
    "asyncpg",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "python-multipart",
    "bcrypt<5",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []

[tool.mypy]
strict = true
python_version = "3.13"
ignore_missing_imports = true
